--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +9,7 @@
     <title>Weather PWA</title>
     <link rel="stylesheet" type="text/css" href="styles/inline.css">
     <!-- TODO add manifest here -->
-
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header class="header">
